Fix my_routines page layout bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,8 +149,12 @@ nav ul a:focus {
     padding: 20px 0;
     color: var(--light-text);
     background-color: var(--dark-2);
-    -webkit-box-shadow: 0 -2px 5px 0 rgba(0, 0, 0, 0.14), 0 -1px 10px 0 rgba(0, 0, 0, 0.12), 0 -1px 4px -1px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 -2px 5px 0 rgba(0, 0, 0, 0.14), 0 -1px 10px 0 rgba(0, 0, 0, 0.12), 0 -1px 4px -1px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 -2px 5px 0 rgba(0, 0, 0, 0.14),
+                        0 -1px 10px 0 rgba(0, 0, 0, 0.12),
+                        0 -1px 4px -1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 -2px 5px 0 rgba(0, 0, 0, 0.14),
+                0 -1px 10px 0 rgba(0, 0, 0, 0.12),
+                0 -1px 4px -1px rgba(0, 0, 0, 0.3);
 
 }
 
@@ -388,8 +392,12 @@ select {
     background-color: var(--dark-1);
     border: 2px solid var(--dark-border);
     border-radius: 20px;
-    -webkit-box-shadow: inset 0 16px 24px 2px rgba(0, 0, 0, 0.14), inset 0 6px 30px 5px rgba(0, 0, 0, 0.12), inset 0 8px 10px -7px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 16px 24px 2px rgba(0, 0, 0, 0.14), inset 0 6px 30px 5px rgba(0, 0, 0, 0.12), inset 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: inset 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+                        inset 0 6px 30px 5px rgba(0, 0, 0, 0.12),
+                        inset 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+                inset 0 6px 30px 5px rgba(0, 0, 0, 0.12),
+                inset 0 8px 10px -7px rgba(0, 0, 0, 0.2);
     padding: 10px;
 }
 
@@ -491,8 +499,6 @@ select {
 
 @media only screen and (min-width: 601px) {
 
-
-
     .logo {
         max-height: 48px;
     }
@@ -507,6 +513,11 @@ select {
 
     .logo {
         margin: 8px 0 8px 8px;
+    }
+
+    .exercise-name {
+        font-size: 1rem;
+        height:3rem;
     }
 
     /* Custom classes for sizing buttons on my_routines page */
